# Lecture-KIN

./: Lecture_IMU.m  Lecture_MVN.m  XsensMt2zoo.m  bmech_line.m  gait_event_knee.m  xsens2zoo.m
Biomech Ops/: fft_line.m  filter_line.m  massnormalize_data.m  point_to_plane.m  resamp_nofilter.m  resample_data.m  reversepol_data.m
Fall2020/: Plot_acc.m  Plottting_all.m  bmech_addevent_Schutte_outdoor_vaibhav.m  gait_event_detect.m  outdoor_IMU_orientation_fix.m  outdoor_gait_cycle_data.m  outdoor_joint_angle.m  outdoor_quaternion.m  quaternion_rotation.m
Fall2020/Output_Final/3_GaitCycle_Vaibhav/: All_Combined_Final.m  Final_Output.m  Gait_Events_Stride_step.m  Gaitcycle_Normal.m  Heelstrike_Detection.m  Mid_Swing_Detection.m  Min_Max.m  Missing_data.m  Opposite_Heelstrike_Detection.m  Output_Shank.m  Output_Thigh.m  Output_Trunk.m  Toe_off_Detection.m  peak_detection_limit.m
Fall2020/Output_Final/csv_file/: CS.csv  FE.csv  GR.csv
Fall2020/Output_Final/zoo_file/: CS.zoo  FE.zoo  GR.zoo
Support Functions/: getChannelSection.m  pointonline.m  readc3dBtk.m  readcsvVicon.m  readtext.m  setFilt.m
Zoo Processing/: combine_data.m
robotics/externalDependency/libccd/: CMakeLists.txt  libccd.notice
robotics/externalDependency/libccd/src/: CMakeLists.txt
robotics/externalDependency/libccd/src/ccd/: ccd_vec3.h
robotics/robotcore/: angdiff.m  axang2quat.m  axang2rotm.m  axang2tform.m  bsplinepolytraj.m  cart2hom.m  checkCollision.m  collisionBox.m  collisionCylinder.m  collisionMesh.m  collisionSphere.m  cubicpolytraj.m  eul2quat.m  eul2rotm.m  eul2tform.m  hom2cart.m  plotTransforms.m  quat2axang.m  quat2eul.m  quat2rotm.m  quat2tform.m  quinticpolytraj.m  rateControl.m  rotm2axang.m  rotm2eul.m  rotm2quat.m  rotm2tform.m  rottraj.m  tform2axang.m  tform2eul.m  tform2quat.m  tform2rotm.m  tform2trvec.m  transformtraj.m  trapveltraj.m  trvec2tform.m
robotics/robotcore/meshes/: multirotor.stl
robotics/robotcore/rate/: csleepfun_mac.c  csleepfun_windows.c  ctimefun_mac.c  ctimefun_windows.c
robotics/robotcore/resources/: alias  functionSignatures.json
robotics/robotslcore/: getBlockHelpMapNameAndPath.m  robotcorelib.slx  sl_customization.m
rotations/rotationslib/: Contents.m  randrot.m
walking_03/: MT_01200871_002-000_00B4406D.txt  MT_01200871_002-000_00B4406E.txt  MT_01200871_002-000_00B44073.txt  MT_01200871_002-000_00B44077.txt  MT_01200871_002-000_00B44078.txt  MT_01200871_002-000_00B44090.txt  MT_01200871_002-000_00B45AE2.txt
(+244 files in other folders)
